# telegram-bot

./: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
bot/: duolingo.py  lastwar.py  lastwar_nl.py  models.py  services.py
src/: config.py  main.py
src/bots/duolingo/: handlers.py  messages.py
src/bots/lastwar/: handlers.py  messages.py  models.py  scheduler.py
src/bots/lastwar/conversation/: prompts.py  states.py
src/bots/lastwar/nl/: interpreter.py
src/shared/: webhook.py
src/shared/utils/: duration.py
tests/: conftest.py  test_duration.py
tests/bots/lastwar/: test_lastwar.py  test_scheduler.py
tests/shared/: test_duration.py
